# scrna

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
notebooks/: firstlook.ipynb
scripts/: firstlook.py  scGKennedy.py
scrna_functions/: __init__.py  celltypemarkers.py  core.py  hgtc_classes.py  marker_genes.json  scanpy_gpu_helper.py
src/scrna/: __init__.py  celltypemarkers.py  functions.py  hgtc_classes.py  liana_mnn_scoring.py  plotting.py  scanpy_gpu_helper.py
src/scrna/data/: bio_journal.mplstyle  marker_genes.json
src/scrna/scripts/: firstlook.py
tests/: test_celltypemarkers.py  test_core.py  test_functions.py  test_gpu_helper.py  test_plotting.py
